feat: feature flag for gateway api routes
